<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_107"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gift_number"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_5">

    <LinearLayout
        android:id="@+id/number_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="自定义数量"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_1314"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_1314"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_1314"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_666"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_666"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_666"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_520"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_520"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_520"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_188"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_188"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_188"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_99"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_99"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_nubmer_text_99"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_66"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_66"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_66"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/number_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_10"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_10"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gift_number_1"
            android:textColor="@color/back_font"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:gravity="center"
            android:text="@string/gift_number_text_1"
            android:textColor="#9A9A9A"
            android:textSize="@dimen/dp_12"
            tools:ignore="SpUsage" />

    </LinearLayout>
</LinearLayout>