<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/shape_border_white_20dp"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_20"
    android:paddingEnd="@dimen/dp_20">

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:drawableStart="@drawable/ic_gender_all"
        android:drawablePadding="@dimen/dp_6"
        android:padding="@dimen/dp_12"
        android:text="@string/all" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_gender_man"
        android:drawablePadding="@dimen/dp_6"
        android:padding="@dimen/dp_12"
        android:text="@string/man" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/line_color" />

    <TextView
        android:id="@+id/tv_girl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_6"
        android:drawableStart="@drawable/ic_gender_girl"
        android:drawablePadding="@dimen/dp_6"
        android:padding="@dimen/dp_12"
        android:text="@string/girl" />
</LinearLayout>