<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FAFAFA"
    android:orientation="vertical">

    <com.hncxco.library_ui.widget.AppToolBar
        android:id="@+id/toolbar"
        style="@style/AppToolBar_white_style"
        app:title="@string/title_about_text" />

    <ImageView
        android:id="@+id/img_about_logo"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/versions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_about_logo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_19"
        android:textColor="#FFAEADB0"
        android:textSize="@dimen/dp_14"
        tools:ignore="SpUsage"
        tools:text="版本号：0.0.1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/about_company_name"
        android:textColor="#FF363537"
        android:textSize="@dimen/text_size_12" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/versions"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/user_self_rule"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:drawableEnd="@drawable/setting_right"
            android:gravity="center_vertical"
            android:paddingStart="17dp"
            android:paddingEnd="@dimen/dp_15"
            android:text="用户隐私协议"
            android:textColor="@color/text_color_primary"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginHorizontal="@dimen/dp_17"
            android:background="@color/color_f6f6f6" />

        <TextView
            android:id="@+id/self_rule"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:drawableEnd="@drawable/setting_right"
            android:gravity="center_vertical"
            android:paddingStart="17dp"
            android:paddingEnd="@dimen/dp_15"
            android:text="隐私协议"
            android:textColor="@color/text_color_primary"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginHorizontal="@dimen/dp_17"
            android:background="@color/color_f6f6f6" />

        <TextView
            android:id="@+id/me_item_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:drawableEnd="@drawable/setting_right"
            android:gravity="center_vertical"
            android:paddingStart="17dp"
            android:paddingEnd="@dimen/dp_15"
            android:text="直播协议"
            android:textColor="@color/text_color_primary"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginHorizontal="@dimen/dp_17"
            android:background="@color/color_f6f6f6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_weight="1"
                android:text="微信客服"
                android:textColor="@color/text_color_primary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/kefu_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_kefu_num"
                android:paddingEnd="@dimen/dp_15"
                android:textColor="@color/color_7a9dff"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginHorizontal="@dimen/dp_17"
            android:background="@color/color_f6f6f6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_weight="1"
                android:text="微信公众号"
                android:textColor="@color/text_color_primary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/common_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dp_15"
                android:textColor="@color/color_7a9dff"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
