<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg_disabled"
    android:orientation="vertical">

    <com.hncxco.library_ui.widget.AppToolBar
        android:id="@+id/toolbar"
        style="@style/AppToolBar_white_style"
        app:barBackColor="@color/menu_bg_disabled"
        app:title="@string/red_packet_withdraw" />

    <!--刚进来显示的界面，未绑定-->
    <FrameLayout
        android:id="@+id/rly_binder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_74"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:background="@color/color_f7f7f7"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_36"
            android:maxLines="1"
            android:text="选择提现平台与对应账号"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_15" />

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="23dp"
            android:background="@drawable/arrow_right"
            android:contentDescription="@null" />

    </FrameLayout>
    <!--绑定成功后显示用户信息的控件，变为可见-->
    <RelativeLayout
        android:id="@+id/rly_binder_succeed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_74"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/zhifubao"
            android:layout_width="@dimen/dp_39_5"
            android:layout_height="@dimen/dp_39_5"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_weichat_pay"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_withdraw_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_75"
            android:maxLines="1"
            android:text="@string/txt_withdraw_wx"
            android:textColor="@color/color_1A1A1A"
            android:textSize="@dimen/text_size_15" />

        <LinearLayout
            android:id="@+id/lly_zhifubao_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/zhifubao"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/zhifubao"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="账号: "
                android:textColor="#333333"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_user_zhifubao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13924011834"
                android:textColor="#333333"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lly_zhifubao_user"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/zhifubao"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="姓名: "
                android:textColor="#333333"
                android:textSize="@dimen/text_size_15" />

            <TextView
                android:id="@+id/tv_user_zhifubao_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="罗生"
                android:textColor="#333333"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="请选择提现额度"
            android:textColor="@color/black"
            android:textSize="@dimen/font_larger" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="奖励金余额:"
            android:textColor="@color/color_666666"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_red_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:gravity="clip_vertical"
            android:paddingLeft="10dp"
            android:text="0"
            android:textColor="@color/color_6E42D2"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/withdraw_notice"
        android:textColor="@color/color_999999"
        android:textSize="13sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_item_view_margin_left_right"
        android:layout_marginRight="@dimen/common_item_view_margin_left_right"
        android:background="@drawable/icon_default_button_selector"
        android:text="立即提现"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />

</LinearLayout>
